# guile-xcb

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README-in.org  README.org  aclocal.m4  config.status  configure  configure.ac  expression.c  guile-xcb.texi
build_aux/: texinfo.tex
flow/: event-loop.scm
language/xml-xcb/: compile-scheme.scm  spec.scm  support.scm
srfi/: srfi-64.scm
srfi/srfi-64/: srfi-64-port.scm
xcb/: event-loop.scm  xml.scm
xcb/xml/: auth.scm  common.scm  connection.scm  core.scm  doc.scm  enum.scm  ext-support.scm  records.scm  struct.scm  switch-test.scm  test.scm  type.scm  union.scm  xproto.xml
xcb/xml/ext/: xproto.scm
xcb/xml/sample/: randr.scm  tinywm.scm  win.scm
